--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 body {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #f8f8f8;
+  background-color:lightgray;
   margin: 0;
   padding: 0;
+  height: 100%;
+  cursor: crosshair;
+
+
 }
 
 #logo-image {
@@ -15,7 +19,7 @@ body {
 nav{
   display: flex;
   justify-content: space-around;
-  background-color: lightgreen;
+  background-color: plum;
 }
 
 nav span{
@@ -26,52 +30,135 @@ nav span{
 nav a{
   padding: 1rem;
 }
+nav a:hover{
+  color: darkgreen;
+  background-color: mintcream;
+}
 
 .registerForm {
   display: flex;
   flex-wrap: wrap;
-
+  background-color: lavenderblush;
+  color: darkslategrey;
+  padding: 10px;
+  margin: 8px;
+  text-align: center;
 }
-.cover{
-  width: 400px;
-  margin: 30px 30px;
-  padding: 20px 20px;
+.registerForm button{
+  background-color: rgb(254, 138, 200);
+  color: seashell;
+  display: flex;
+}
+.submit{
+  display: flex;
   justify-content: center;
-  
+  align-items: center;
 }
-.search{
-  background-color: thistle;
-  padding: 8px 8px 8px 8px;
-  margin: 8px 8px 8px 8px;
-  color: darkolivegreen;
-  justify-content: center;
- 
-
-}
-h2 {
+input{
+  background-color: rgb(249, 127, 249);
+  color: rgb(74, 73, 73);
+  margin: 5px;
+  border-radius: 5px;
+  border: 3px solid;
   text-align: center;
 
 }
+.login{
+  text-align: center;
+  margin: 8px;
+  padding: 8px;
+  justify-content: center;
+}
+.login button{
+  background-color: rgb(253, 202, 229);
+  display: flex;
+  color: midnightblue;
+}
+/*img style*/
+.cover{
+  max-width: 300px;
+  margin: 30px;
+  padding: 20px;
+  justify-content: center;
+  height: auto; 
+  flex: 1;
+  image-resolution: 100%;
+}
+img {
+  overflow-clip-margin: content-box;
+}
+.search{
+  background-color: thistle;
+  padding: 1em;
+  margin: 2em;
+  color: darkolivegreen;
+  justify-content: center;
+  display: inline-block;
+  text-align: center;
+  cursor: cell;
+  border-radius: 6px;
+}
+.search:hover{
+  background-color: rgb(190, 180, 180);
+  color: deeppink;
+  transition: all .8s;
+}
+.search-bar{
+  color: mediumpurple;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 16px;
+  justify-items: center;
+}
+.searchfav{
+  color: rgb(127, 5, 127);
+}
+h2 {
+  text-align: center;
+  color: rgb(145, 8, 203);
+}
+.all{
+  text-align: center;
+  color: plum;
+  font-size: 20px;
+}
 .filter{
 font-size: 16px;
-color: darkslategrey;
+color: darkmagenta;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .singleBook{
   text-align: center;
+  color: darkslateblue ;
+  justify-content: center;
+  margin: 10px 10px;
+  padding: 5px 5px;
 }
 .allBooks{
   display: flex;
-  flex-direction:row;
   flex-wrap: wrap;
- justify-content: space-between
-
-
+ justify-content: center;
+ margin-bottom: 15px;
 
 }
+.allB{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: mediumpurple;
+  align-content: center;
+}
+
 ul{
   list-style: none;
-  justify-content: space-around;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 20px; 
+
 }
 li a{
   padding: 1rem;
@@ -79,10 +166,170 @@ li a{
   transition: all 1s;
   
 }
-.linkallb {
-  color: plum;
+.linktob {
+  color: rgb(246, 9, 246);
  justify-content: center;
  display: flex;
- 
+ align-items: center;
+ padding: 6px;
+ border-radius: 2rem;
+ border: 2px solid;
+ background-color: #fddfe3;
   
+}
+.linktob:hover{
+  background-color: rgb(79, 3, 116);
+  color: floralwhite;
+  transition: all .8s;
+
+}
+.singleb{ 
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 10px;
+  align-content: center;
+  
+}
+.checkout{
+  background-color: mistyrose;
+  color: darkslategrey;
+  font-size: 14px;
+align-items: flex-start;
+}
+.checkout:hover{
+  background-color: darkslategray;
+  color: rgb(252, 83, 168);
+  align-items: center;
+}
+.about{
+  color: darkolivegreen;
+  font-size: 20px;
+  text-align: center;
+
+}
+.about2{
+  color: darkgreen;
+  font-size: 25px;
+  text-align: center
+}
+
+.linkallb{
+  text-align: center;
+  margin: auto;
+  padding: 5px,3px;
+}
+a{
+  text-decoration: none;
+}
+.reading{
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+background-color:rgb(249, 203, 247);
+color: darkslateblue;
+justify-content: center;
+align-content: center;
+justify-items: center;
+margin: auto;
+
+}
+form{
+  display: flex;
+  justify-content: center;
+}
+button{
+  padding: 4px ;
+  padding-block: 1px;
+  font-size: 16px;
+  text-align: center;
+  border-radius: 5px;
+  border-width: 2px;
+  border-color: darkorchid;
+  margin: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: lavenderblush;
+  align-content: center;
+}
+button .allB {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+//*user info*//
+
+.acc1{
+  text-align: center;
+  color: purple; 
+}
+.logout{ 
+display: flex;
+align-items: center;
+background-color: papayawhip;
+border-radius: 5px solid;
+justify-content: center;
+align-items: center;
+align-content: center;
+margin: auto;
+
+}
+.logout button{
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+
+}
+.acc2{
+  text-align: center;
+  color: darkviolet;
+}
+.user-read{
+  text-align: center;
+  color:violet;
+}
+.title{
+  text-align: center;
+  color: fuchsia;
+}
+.acc3{
+  text-align: center;
+}
+.auth{
+  color: mediumvioletred;
+}
+.return-but{
+  justify-content: center;
+  color: darkslategrey;
+  background-color: rgb(188, 188, 244);
+  margin: auto;
+}
+.return-but:hover{
+  color: darkgreen;
+  background-color: peachpuff;
+}
+
+.goback{
+  display: flex;
+  background-color: rgb(250, 128, 250);
+  color: lightslategrey;
+  padding: 8px;
+  margin-bottom: 10px;
+  margin-block: center;
+  margin-inline: auto;
+  border: 2px solid;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+}
+.goback:hover{
+  background-color: rgb(3, 141, 44);
+  color:mintcream;
+  transition: all .8s;
 }
