--- a/src/index.css
+++ b/src/index.css
@@ -216,7 +216,10 @@ align-items: flex-start;
   font-size: 25px;
   text-align: center
 }
-
+h4{
+  text-align: center;
+  color: rgb(93, 3, 118);
+}
 .linkallb{
   text-align: center;
   margin: auto;
