--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,10 @@
 body {
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color:lightgray;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: lightgray;
   margin: 0;
   padding: 0;
   height: 100%;
   cursor: crosshair;
-
-
 }
 
 #logo-image {
@@ -16,21 +14,21 @@ body {
 
 /* Add your own custom styles here */
 
-nav{
+nav {
   display: flex;
   justify-content: space-around;
   background-color: plum;
 }
 
-nav span{
+nav span {
   display: flex;
   justify-content: space-around;
 }
 
-nav a{
+nav a {
   padding: 1rem;
 }
-nav a:hover{
+nav a:hover {
   color: darkgreen;
   background-color: mintcream;
 }
@@ -44,50 +42,49 @@ nav a:hover{
   margin: 8px;
   text-align: center;
 }
-.registerForm button{
+.registerForm button {
   background-color: rgb(254, 138, 200);
   color: seashell;
   display: flex;
 }
-.submit{
+.submit {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-input{
+input {
   background-color: rgb(249, 127, 249);
   color: rgb(74, 73, 73);
   margin: 5px;
   border-radius: 5px;
   border: 3px solid;
   text-align: center;
-
 }
-.login{
+.login {
   text-align: center;
   margin: 8px;
   padding: 8px;
   justify-content: center;
 }
-.login button{
+.login button {
   background-color: rgb(253, 202, 229);
   display: flex;
   color: midnightblue;
 }
 /*img style*/
-.cover{
+.cover {
   max-width: 300px;
   margin: 30px;
   padding: 20px;
   justify-content: center;
-  height: auto; 
+  height: auto;
   flex: 1;
   image-resolution: 100%;
 }
 img {
   overflow-clip-margin: content-box;
 }
-.search{
+.search {
   background-color: thistle;
   padding: 1em;
   margin: 2em;
@@ -98,12 +95,12 @@ img {
   cursor: cell;
   border-radius: 6px;
 }
-.search:hover{
+.search:hover {
   background-color: rgb(190, 180, 180);
   color: deeppink;
-  transition: all .8s;
+  transition: all 0.8s;
 }
-.search-bar{
+.search-bar {
   color: mediumpurple;
   display: flex;
   justify-content: center;
@@ -111,38 +108,37 @@ img {
   margin-bottom: 16px;
   justify-items: center;
 }
-.searchfav{
+.searchfav {
   color: rgb(127, 5, 127);
 }
 h2 {
   text-align: center;
   color: rgb(145, 8, 203);
 }
-.all{
+.all {
   text-align: center;
   color: plum;
   font-size: 20px;
 }
-.filter{
-font-size: 16px;
-color: darkmagenta;
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.filter {
+  font-size: 16px;
+  color: darkmagenta;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-.singleBook{
+.singleBook {
   text-align: center;
-  color: darkslateblue ;
+  color: darkslateblue;
   justify-content: center;
   margin: 10px 10px;
   padding: 5px 5px;
 }
-.allBooks{
+.allBooks {
   display: flex;
   flex-wrap: wrap;
- justify-content: center;
- margin-bottom: 15px;
-
+  justify-content: center;
+  margin-bottom: 15px;
 }
-.allB{
+.allB {
   display: flex;
   justify-content: center;
   text-align: center;
@@ -150,40 +146,36 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   align-content: center;
 }
 
-ul{
+ul {
   list-style: none;
   display: block;
   margin-block-start: 1em;
   margin-block-end: 1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
-  padding-inline-start: 20px; 
-
+  padding-inline-start: 20px;
 }
-li a{
+li a {
   padding: 1rem;
   margin: 1rem;
   transition: all 1s;
-  
 }
 .linktob {
   color: rgb(246, 9, 246);
- justify-content: center;
- display: flex;
- align-items: center;
- padding: 6px;
- border-radius: 2rem;
- border: 2px solid;
- background-color: #fddfe3;
-  
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  padding: 6px;
+  border-radius: 2rem;
+  border: 2px solid;
+  background-color: #fddfe3;
 }
-.linktob:hover{
+.linktob:hover {
   background-color: rgb(79, 3, 116);
   color: floralwhite;
-  transition: all .8s;
-
+  transition: all 0.8s;
 }
-.singleb{ 
+.singleb {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -192,60 +184,57 @@ li a{
   border-radius: 5px;
   margin-top: 10px;
   align-content: center;
-  
 }
-.checkout{
+.checkout {
   background-color: mistyrose;
   color: darkslategrey;
   font-size: 14px;
-align-items: flex-start;
+  align-items: flex-start;
 }
-.checkout:hover{
+.checkout:hover {
   background-color: darkslategray;
   color: rgb(252, 83, 168);
   align-items: center;
 }
-.about{
+.about {
   color: darkolivegreen;
   font-size: 20px;
   text-align: center;
-
 }
-.about2{
+.about2 {
   color: darkgreen;
   font-size: 25px;
-  text-align: center
+  text-align: center;
 }
-h4{
+h4 {
   text-align: center;
   color: rgb(93, 3, 118);
 }
-.linkallb{
+.linkallb {
   text-align: center;
   margin: auto;
-  padding: 5px,3px;
+  padding: 5px, 3px;
 }
-a{
+a {
   text-decoration: none;
 }
-.reading{
+.reading {
   display: flex;
   align-items: center;
   text-decoration: none;
-background-color:rgb(249, 203, 247);
-color: darkslateblue;
-justify-content: center;
-align-content: center;
-justify-items: center;
-margin: auto;
-
+  background-color: rgb(249, 203, 247);
+  color: darkslateblue;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  margin: auto;
 }
-form{
+form {
   display: flex;
   justify-content: center;
 }
-button{
-  padding: 4px ;
+button {
+  padding: 4px;
   padding-block: 1px;
   font-size: 16px;
   text-align: center;
@@ -264,60 +253,58 @@ button .allB {
   justify-content: center;
   text-align: center;
 }
-//*user info*//
+/*user info*/
 
-.acc1{
+.acc1 {
   text-align: center;
-  color: purple; 
+  color: purple;
 }
-.logout{ 
-display: flex;
-align-items: center;
-background-color: papayawhip;
-border-radius: 5px solid;
-justify-content: center;
-align-items: center;
-align-content: center;
-margin: auto;
-
+.logout {
+  display: flex;
+  align-items: center;
+  background-color: papayawhip;
+  border-radius: 5px solid;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  margin: auto;
 }
-.logout button{
+.logout button {
   display: flex;
   align-content: center;
   justify-content: center;
   align-items: center;
-
 }
-.acc2{
+.acc2 {
   text-align: center;
   color: darkviolet;
 }
-.user-read{
+.user-read {
   text-align: center;
-  color:violet;
+  color: violet;
 }
-.title{
+.title {
   text-align: center;
   color: fuchsia;
 }
-.acc3{
+.acc3 {
   text-align: center;
 }
-.auth{
+.auth {
   color: mediumvioletred;
 }
-.return-but{
+.return-but {
   justify-content: center;
   color: darkslategrey;
   background-color: rgb(188, 188, 244);
   margin: auto;
 }
-.return-but:hover{
+.return-but:hover {
   color: darkgreen;
   background-color: peachpuff;
 }
 
-.goback{
+.goback {
   display: flex;
   background-color: rgb(250, 128, 250);
   color: lightslategrey;
@@ -331,8 +318,8 @@ margin: auto;
   justify-content: center;
   align-content: center;
 }
-.goback:hover{
+.goback:hover {
   background-color: rgb(3, 141, 44);
-  color:mintcream;
-  transition: all .8s;
+  color: mintcream;
+  transition: all 0.8s;
 }
